test/sema/mutable-return-type.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

// CHECK: [[@LINE+1]]:6: error: return types cannot be 'mutable'
func foo() -> mutable int { return 42; }
